--- a/yql.html
+++ b/yql.html
@@ -1,11 +1,11 @@
 <html><head><script src="https://yui-s.yahooapis.com/3.8.0/build/yui/yui-min.js"></script><script>
 YUI().use('node', 'event', 'yql', function(Y) {
   var stationID = 488
-  var yql = 'http://powietrze.gios.gov.pl/pjp/current/station_details/table/' + stationID + '/1/0'
-  yql = 'SELECT * FROM html WHERE url=\'' + yql + '\' AND xpath=\'//div[@class="container"]//div[@class="row"]//div[@class="table-responsive"]//table\''
+  var yql = 'http://powietrze.gios.gov.pl/pjp/current/station_details/table/' + stationID + '/2/0'
+  yql = 'SELECT * FROM html WHERE url=\'' + yql + '\' AND xpath=\'//div[@class="container"]//div[@class="row"]//div[@class="table-responsive"]//table//tbody//tr\'|sort(field="th", descending="true")'
   
   var self = {
-    data:{},
+    data:{pollutions: []},
     config: {pollutionColumn: 1}
   }//this;
   Y.YQL(yql, function(response) {
@@ -13,21 +13,29 @@ YUI().use('node', 'event', 'yql', function(Y) {
       console.log(response.error.description)
     }
     else {
-      self.data.city = response.query.results.table.caption.replace(/Dane pomiarowe tabele +|\t+|\(.+|\n +/gmi, '')
       var pollution
-			response.query.results.table.tbody.tr.forEach(function(item, index){
-				if(index < response.query.results.table.tbody.tr.length - 3) {
-					pollution = parseFloat(item.td[self.config.pollutionColumn].replace(',', '.'))
-					if(pollution) {
-						self.data.pollution = pollution
-					}
-				}
-			})
+      var i=1
+      for (let item of response.query.results.tr) {
+        pollution = parseFloat(item.td[self.config.pollutionColumn].replace(',', '.'))
+        if(pollution) {
+          self.data.pollutions[i++] = pollution
+        }
+        if(i > 12){
+          break
+        }
+			}
 			self.loaded = true;
 			//self.updateDom(self.animationSpeed);
+      var w = Math.min(self.data.pollutions) / Math.max(self.data.pollutions)
+      w = w > .5 ? w : .5
+      var ncl = 0, ncm = 0
+      for (i = 1; i <= 12; i++) {
+        ncl += Math.pow(w, i - 1) * self.data.pollutions[i];
+        ncm += Math.pow(w, i - 1)
+      }
+      self.data.pollution = ncl/ncm
     }
+    console.log(self.data, ncl/ncm);
   });
-  
-  console.log(self);
 });
 </script></head></body></body></html>
